// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user output should match snapshot for 'anotherUsename' username 1`] = `
<div>
  <div>
    <p>
      Username: 
      anotherUsename
    </p>
    <p>
      I hope I'll be overwritten!
    </p>
  </div>
</div>
`;

exports[`user output should match snapshot for 'randomUsername123' username 1`] = `
<div>
  <div>
    <p>
      Username: 
      randomUsername123
    </p>
    <p>
      I hope I'll be overwritten!
    </p>
  </div>
</div>
`;
